--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,43 @@
-.App {
-  text-align: center;
-}
+@charset "utf-8";
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/**** Start App ****/
+.app {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+
+  background: pink;
 }
 
-.App-link {
-  color: #61dafb;
+/**** Start Header ****/
+header {
+  background: olivedrab;
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/**** Start Main ****/
+main {
+  height: 100%;
+  display: flex;
+}
+
+/** Start Side Menu **/
+aside {
+  background: darkolivegreen;
+  /* width: 200px; */
+  flex-grow: 1;
+}
+
+/** Start Map **/
+section {
+  background: darkmagenta;
+  /* width: 100%; */
+  flex-grow: 5;
+}
+
+/**** Start Footer ****/
+footer {
+  height: 50px;
+  background: olivedrab;
 }
