--- a/src/App.css
+++ b/src/App.css
@@ -10,32 +10,195 @@
 
 /**** Start Header ****/
 header {
-  height: 50px;
-  background: olivedrab;
+  height: 10%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header h1 {
+  font-size: 1.7rem;
+  color: #464b5f;
 }
 
 /**** Start Main ****/
 main {
-  height: 100%;
+  height: 90%;
   display: flex;
 }
 
 /** Start Side Menu **/
 aside {
-  background: darkolivegreen;
-  width: 200px;
-  flex-grow: 1;
+  background-color: #f1f1f1;
+  width: 375px;
+  padding: 10px 15px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+aside > div {
+  background: #fff;
+  margin: 0 0 20px;
+}
+
+/* Start Search Options */
+aside .search-options {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.01);
+}
+
+aside .search-options h2 {
+  color: #fff;
+  text-align: center;
+  letter-spacing: 2px;
+  padding: 10px 0;
+  font-size: 1.3rem;
+  background-color: #464b5f;
+}
+
+aside .search-options .options {
+  padding: 5px 10px;
+}
+
+aside .search-options .options label,
+aside .search-options .options select {
+  display: block;
+}
+
+aside .search-options .options label {
+  color: #555;
+  margin: 2px 0 4px;
+}
+
+aside .search-options .options input,
+aside .search-options .options select {
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  color: #777;
+  padding: 5px 10px;
+  font-size: 1.2rem;
+}
+
+aside .search-options button {
+  background-color: #fff;
+  font-size: 1.2rem;
+  border: 1px solid #e6e6e6;
+  color: #929294;
+  width: 100%;
+  padding: 10px 15px;
+  margin: 10px 0 0;
+  cursor: pointer;
+}
+
+/* Start Filter Options */
+aside .filter-options {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.01);
+}
+
+aside .filter-options .options {
+  padding: 5px 10px;
+}
+
+aside .filter-options h2 {
+  color: #fff;
+  text-align: center;
+  letter-spacing: 2px;
+  padding: 10px 0;
+  font-size: 1.3rem;
+  background-color: #464b5f;
+}
+
+aside .filter-options .options input {
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  color: #777;
+  padding: 5px 10px;
+  font-size: 1.2rem;
+}
+
+/* Start Venues List */
+aside .venues {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.01);
+  padding: 10px;
+}
+
+aside .venues-list .venue {
+  padding: 10px;
+  margin: 8px 0;
+  border: 1px solid #e6e6e6;
+  cursor: pointer;
+  animation: fadeInUp 1.4s;
+}
+
+@keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translate3d(0, 20%, 0);
+    }
+
+    100% {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+}
+
+aside .venues-list .venue:hover {
+  background-color: #464b5f;
+}
+
+aside .venues-list .venue h4 {
+  color: #444;
+  font-size: 1rem;
+}
+
+aside .venues-list .venue:hover h4 {
+  color: #fff;
 }
 
 /** Start Map **/
 section {
-  /* width: 100%; */
+  width: 100%;
   position: relative;
-  flex-grow: 5;
 }
 
-/**** Start Footer ****/
-footer {
-  height: 50px;
-  background: olivedrab;
+/* Start InfoWindow */
+.gm-ui-hover-effect {
+  top: 1px !important;
+  right: -36px !important;
+  background-color: #fff !important;
+}
+
+.infoWindow-content h3 {
+  color: #464b5f;
+  font-size: 1.3rem;
+  margin: 0 0 5px;
+}
+
+.infoWindow-content img {
+    padding: 5px 5px 15px;
+    border: 1px solid #d9dee9;
+    border-radius: 0.3em;
+}
+
+.infoWindow-content .infoWindow-text {
+  margin: 0 0 15px;
+}
+
+.infoWindow-content .infoWindow-text p {
+  margin-bottom: 5px;
+  font-size: 1.2rem;
+}
+
+.infoWindow-content .infoWindow-text p span {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.infoWindow-content > span {
+  color: #464b5f;
+  border-top: 1px solid #ccc;
+  padding-top: 5px;
+  letter-spacing: 0.05rem;
 }
