--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,10 @@ aside .search-options button {
   cursor: pointer;
 }
 
+.invalid-field {
+  border: 1px solid red !important;
+}
+
 @media all and (min-width: 800px) {
   aside .search-options {
     box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.01);
